# torch-mlir

./: CMakeLists.txt  setup.py
build_tools/: update_abstract_interp_lib.sh  update_torch_ods.sh
build_tools/python_deploy/: build_linux_packages.sh
include/torch-mlir-c/: Dialects.h
include/torch-mlir/Dialect/Torch/IR/: GeneratedTorchOps.td  TorchOps.h  (+1 more)
lib/CAPI/: Dialects.cpp
lib/Conversion/TorchToLinalg/: Uncategorized.cpp
lib/Conversion/TorchToTMTensor/: TorchToTMTensor.cpp
lib/Conversion/TorchToTosa/: TosaLegalizeUtils.cpp
lib/Dialect/Torch/IR/: TorchOps.cpp  TorchTypes.cpp
lib/Dialect/Torch/Transforms/: AbstractInterpLibrary.cpp  DecomposeComplexOps.cpp  DropAbstractInterpCalculations.cpp  InlineGlobalSlots.cpp  LowerToBackendContract.cpp  MaximizeValueSemantics.cpp  Passes.cpp  RaiseIfOpShapesDtypes.cpp  ReduceOpVariants.cpp  ReifyShapeCalculations.cpp
lib/Dialect/Torch/Utils/: TorchUpstream.cpp  Utils.cpp
lib/Dialect/TorchConversion/Transforms/: BackendTypeConversion.cpp
lib/RefBackend/: RefBackend.cpp
projects/onnx_c_importer/: OnnxImporter.cpp  OnnxImporter.h
projects/pt1/e2e_testing/: xfail_sets.py
projects/pt1/python/torch_mlir/: torchscript.py
python/: TorchMLIRModule.cpp
python/torch_mlir/extras/: fx_importer.py
test/Dialect/Torch/: canonicalize.mlir  decompose-complex-ops.mlir  maximize-value-semantics.mlir  raise-if-op-shapes-dtypes.mlir
test/Dialect/TorchConversion/: func-backend-type-conversion.mlir
utils/bazel/torch-mlir-overlay/: BUILD.bazel
utils/bazel/torch-mlir-overlay/projects/onnx_c_importer/: BUILD.bazel
(+10 files in other folders)
